--- a/mad_web/static/sass/workshops.scss
+++ b/mad_web/static/sass/workshops.scss
@@ -11,6 +11,7 @@
 
 #umad-callout .container {
   margin: 0 auto;
+  padding-top: 20px;
   display: inline-block;
 }
 
